# mint

./: .gitignore  .gitmodules  README.md  pyproject.toml  todo.md
aarch64_moesi/: CMakeLists.txt  aarch64_moesi.py  main.c
bringup/: CMakeLists.txt  build.sh  main.c  pattern.py
c_stressapp/: CMakeLists.txt  adler32.c  adler32.h  c_stressapp.py  fill.c  main.c  pattern_gen.py  worker.c  worker.h
cache_coherency/: cc.pss  cl_update_gen.py  mem_access.h
chi/: cdn_chi_executor.sv  chi_uvm_main.py
chi_moesi/: cdn_chi_virtseq.sv  chi_moesi.py
chi_state_transition/: cdn_chi_executor.sv  chi_uvm_main.py
chi_stressapp/: chi_stressapp.py  chi_stressapp_executor.sv
docs/: armv8 assembly programmers guide.md  doc.md  javascript.md  linux kernel virtual memory manager.md  relocation.md
ivy/: cfg.py
ivy/__crel__/: CMakeLists.txt  readme.md
ivy/__crel__/arch/arm64/: CMakeLists.txt
ivy/__crel__/arch/arm64/include/asm/: assembler.h  barrier.h  cache.h  cpufeature.h  io.h  linkage.h  lse.h  mcs_spinlock.h  memory.h  qspinlock.h  spinlock.h  spinlock_types.h  sysreg.h
ivy/__crel__/arch/arm64/src/: CMakeLists.txt  cache.S  cache.c  head.S  psci.c  smccc_call.S  sysreg.h  user_pt_data.S
ivy/__crel__/arch/arm64/src/lib/: memchr.S  memcmp.S  memcpy.S  memset.S  strchr.S  strcmp.S  strlen.S  strncmp.S  strnlen.S  strrchr.S
ivy/__crel__/arch/arm64/tools/: CMakeLists.txt
ivy/__crel__/cmake/: ivyConfig.cmake
ivy/__crel__/include/: CMakeLists.txt  asm.h  print.h  types.h  xrt.h
ivy/__crel__/include/asm-generic/: barrier.h  io.h  rwonce.h
ivy/__crel__/include/cstd/: stdarg.h  stdint.h  string.h
ivy/__crel__/include/ivy/: CMakeLists.txt  cpu_func.h  errno.h  halt_code.h  log.h  malloc.h  nvme.h  pci.h  pci_regs.h  print.h  sync.h  xrt.h  zni.h
ivy/__crel__/include/linux/: init.h  instrumented.h  kconfig.h  kernel.h  linkage.h  psci.h  spinlock.h  spinlock_api_smp.h  spinlock_types.h  types.h
ivy/__crel__/include/linux/atomic/: atomic-arch-fallback.h  atomic-instrumented.h  atomic-long.h
ivy/__crel__/scripts/atomic/: gen-atomic-instrumented.sh
ivy/__crel__/src/: CMakeLists.txt  arm-smccc.h  dummy_uart.c  dummy_uart.h  dw16550.c  dw16550.h  head.S  image.h  ivy.lds.S  linux_const.h  malloc_simple.c  of_fdt.c  of_fdt.h  pl011.c  pl011.h  print.c  psci.c  psci.h  smccc_call.S  spinlock.S  spinlock.h  sync.c  uapi_psci.h  xmain.c  xrt.c
ivy/__crel__/src/kernel/locking/: qspinlock.c
ivy/__crel__/src/libc/: string.c
ivy/__crel__/src/libfdt/: fdt.c  fdt.h  fdt_addresses.c  fdt_empty_tree.c  fdt_ro.c  fdt_rw.c  fdt_strerror.c  fdt_sw.c  fdt_wip.c  libfdt_env.h  libfdt_internal.h
ivy/__crel__/src/nvme/: nvme.c
ivy/__crel__/src/pci/: probe.c
ivy/cmd/: app.py  cli.py  image.py  memfile.py  run_mango.py
ivy/kernel/: cfg.py  const.py  dt.py  mb.py  pt.py
ivy/utils/: utils.py
ivy_cfg/: emu.py  sim.py
lily/aarch64_moesi/: aarch64_moesi.py
lily/addr_dep_object_construction/: CMakeLists.txt  adoc_main.py  adoc_v4.py
lily/bringup/: main.c
lily/c_stressapp/: c_stressapp.py  fill.c  main.c  pattern_gen.py
lily/chi_moesi/: cdn_chi_executor.sv  chi_moesi.py
lily/chi_stressapp/: chi_stressapp.py
lily/dts/: qemu.md  virt_4c_nvme.dts  virt_4die_8c.dts  virt_c2.dts
lily/ivy_cfg/: sim.py
lily/lock_counter/: lock_counter_main.py  lock_counter_v4.py  readme.md
lily/memory_bandwidth/: main.c
lily/memtester/: CMakeLists.txt  readme.md  tests.c
lily/message_passing/: CMakeLists.txt  mp_main.py  mp_v3.py
lily/mlmo/: CMakeLists.txt  mlmo.py
lily/models/: stressapp.py
lily/nvme_bringup/: main.c
lily/rand_inst_sample/: rand_inst.py
lily/simple_weakly_ordering/: CMakeLists.txt  main.c  swo_main.py  swo_v3.py
lily/ticket_lock/: cfunc.h  pci_main.c  ticket_lock_main.py  ticket_lock_v4.py
lily/user_map_sample/: CMakeLists.txt  um.py
memlat/: CMakeLists.txt  data_gen.py  main.c
memory_bandwidth/: CMakeLists.txt  main.c  mb.py
memory_cell/: .gitignore  CMakeLists.txt  README.md  cc.pss  main.c  sel_cl.py
memtester/: CMakeLists.txt  main.c  memtester.h  sizes.h  tests.c  tests.h  types.h
mint/: moesi.py  readme.md  stressapp.py
mint/aarch64_moesi/: CMakeLists.txt  aarch64_moesi.py  main.c
mint/addr_dep_object_construction/: adoc_main.py
mint/c_stressapp/: c_stressapp.py  pattern_gen.py  worker.c
mint/chi_moesi/: chi_moesi.py
mint/chi_stressapp/: chi_stressapp.py  chi_stressapp_executor.sv
mint/dts/: qemu.md  virt_c4.dts
mint/lock_counter/: CMakeLists.txt  check.h  lock_counter_main.py
mint/memlat/: main.c
mint/memory_bandwidth/: .gitignore  CMakeLists.txt  main.c  mb.py  test_cfg.py.sample
mint/memtester/: memtester.c
mint/message_passing/: CMakeLists.txt  mp_main.py  mp_v2.py  mp_v3.py  mp_v4.py
mint/models/: moesi.py  stressapp.py
mint/models/deprecated/: moesi_state.py
mint/nvme_bringup/: CMakeLists.txt  main.c
mint/pci_bringup/: CMakeLists.txt  main.c
mint/rand_inst_sample/: CMakeLists.txt  main.c  rand_inst.py
mint/simple_weakly_ordering/: CMakeLists.txt  cfunc.h  swo_main.py  swo_v2.py  swo_v3.py  swo_v4.py
mint/ticket_lock/: CMakeLists.txt  cfunc.h  main.c  ticket_lock_main.py  ticket_lock_v4.py
mint/ticket_lock_zni/: CMakeLists.txt  main.c  ticket_lock_main.py
mint/user_map_sample/: main.c  um.py
mint/zni_bringup/: CMakeLists.txt  main.c
mlmo/: main.c
purslane/: addr_space.py  dag.py  dsl.py  state.py
purslane/aarch64/: instr_pkg.py  instr_stream.py  locks.py  v8.py
purslane/aarch64/deprecated/: instr_stream.py
purslane/aarch64/isa/: instr.py  v8.py
tests/: addr_space_test.py  xdt_test.py  xmb_test.py
tl/: config.h  head.S  makefile  readme.md  tl.lds.S
toolchains/: aarch64-generic-gnu.cmake  aarch64-linux-gnu.cmake  aarch64-none-elf.cmake  aarch64-none-linux-gnu.cmake
web/: client.py  server.py
