[tool.poetry]
name = "mint"
version = "0.1.0"
description = ""
authors = ["zuo qian <zuoqian@qq.com>"]
readme = "README.md"

packages = [{ include = "mosei" }]

[tool.poetry.dependencies]
python = "^3.10"

[[tool.poetry.source]]
name = "ivy_pub"
url = "http://10.10.10.111:3141/ivy/pub/+simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
