[tool.poetry]
name = "mint"
version = "0.1.0"
description = ""
authors = ["zuo qian <zuoqian@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyvsc = "^0.9.1.9920936192"
numpy = "^2.0.0"
datasize = "^1.0.0"

[[tool.poetry.source]]
name = "ivy_pub"
url = "http://10.10.10.111:3141/ivy/pub/+simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
